--- a/_layouts/pdf.html
+++ b/_layouts/pdf.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-  {% include head.html %}
+  <head>
+    <meta charset="utf-8">
+    <title>Throwaway title</title>
+  </head>
 
   <body>
 
