--- a/_layouts/pdf.html
+++ b/_layouts/pdf.html
@@ -6,7 +6,7 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   </head>
 
-  <body>
+  <body width="100vw" height="100vh">
 
         {{ content }}
 
