--- a/_layouts/pdf.html
+++ b/_layouts/pdf.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <link rel='stylesheet' type='text/css' href='https://necolas.github.io/normalize.css/8.0.0/normalize.css'>
+    <link rel='stylesheet' type='text/css' href='/css/candy.css'>
   </head>
 
-  <body width="100vw" height="100vh">
+  <body>
 
         {{ content }}
 
