--- a/_layouts/pdf.html
+++ b/_layouts/pdf.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <link rel='stylesheet' type='text/css' href='https://necolas.github.io/normalize.css/8.0.0/normalize.css'>
-    <link rel='stylesheet' type='text/css' href='/css/candy.css'>
-  </head>
+
+  {% include head.html %}
 
   <body>
 
