--- a/www/_includes/head.html
+++ b/www/_includes/head.html
@@ -2,5 +2,5 @@
   <meta charset="utf-8">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} zzz</title>
   <link rel='stylesheet' type='text/css' href='https://necolas.github.io/normalize.css/8.0.0/normalize.css'>
-  <link rel='stylesheet' type='text/css' href='/css/candy.css'>
+  <link rel="stylesheet" href="{{ "/css/candy.css" | prepend: site.baseurl }}">
 </head>
