--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} zzz</title>
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <link rel='stylesheet' type='text/css' href='https://necolas.github.io/normalize.css/8.0.0/normalize.css'>
-  <link rel='stylesheet' type='text/css' href='/css/candy.css'>
+  <link rel="stylesheet" href="{{ "/css/candy.css" | prepend: site.baseurl }}">
 </head>
